--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <p>Live your life in real time - live and die right on the screen. Think in real time - your thoughts will be immediately encoded by the computer. Make your revolution in real time - not on the streets, but in [live] studios. Relive your love passion in real time - with video on throughout its progression. Get inside your body in real time - watch your blood flowing through endovideoscopy, your own internal organs functioning as if you were in the midst of them.</p>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js"></script>
     <script src="script.js"></script>
-    <button>get NFT</button>
+    <button onclick="window.location.href='https://opensea.io/assets/base/0x2614f2a401102febbfef2c50dcd40fcc6143f666/1'">
+        Get NFT (VPN)
+    </button>
 </body>
 </html>
